--- a/index.html
+++ b/index.html
@@ -262,7 +262,6 @@
   <script src="./assets/js/plugins/perfect-scrollbar.min.js"></script>
   <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
   <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
   <script src="./assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
   <script src="./assets/js/questionScript.js"></script>
   <script src="./assets/js/plugins/typedjs.js"></script>
@@ -307,7 +306,9 @@
   </script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js'></script>
+  <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js'></script> -->
+  <script src="./assets/js/slick.js"></script>
+
   <script src="./assets/timeline/script.js"></script>
 
 </body>
